--- a/ES6_promise/package.json
+++ b/ES6_promise/package.json
@@ -7,3 +7,11 @@
     "jest": "^29.7.0"
   }
 }
+
+"scripts": {
+  "lint": "eslint .",
+  "check-lint": "eslint [0-9]*.js",
+  "dev": "npx babel-node",
+  "test": "jest",
+  "full-test": "eslint [0-9]*.js && jest"
+}
